Fix: disabled scrollbar add {overflow:hidden;} to body in css.

--- a/styles.css
+++ b/styles.css
@@ -11,6 +11,10 @@ html, body {
     height: 100%;
 }
 
+body {
+    overflow:hidden;
+}
+
 .unfocus:not(.exclude) {
   opacity: 0.5;
 }
